last version before client verification

--- a/css/style.css
+++ b/css/style.css
@@ -3434,7 +3434,6 @@ img{
 	font-size: 14px;
 	line-height: 24px;
 	color: #aaaaaa;
-	max-width: 300px;
 }
 
 .right-column .feature-block-two .inner-box{
@@ -4823,6 +4822,7 @@ img{
 }
 
 .faq-form .form-group input[type="text"],
+.faq-form .form-group input[type="tel"],
 .faq-form .form-group input[type="email"],
 .faq-form .form-group input[type="url"],
 .faq-form .form-group textarea,
@@ -4929,6 +4929,7 @@ img{
 }
 
 .request-form .form-group input[type="text"],
+.request-form .form-group input[type="tel"],
 .request-form .form-group input[type="email"],
 .request-form .form-group input[type="url"],
 .request-form .form-group textarea,
@@ -5050,6 +5051,7 @@ img{
 }
 
 .contact-form .form-group input[type="text"],
+.contact-form .form-group input[type="tel"],
 .contact-form .form-group input[type="email"],
 .contact-form .form-group input[type="url"],
 .contact-form .form-group textarea,
@@ -7498,6 +7500,7 @@ img{
 }
 
 .comment-form .form-group input[type="text"],
+.comment-form .form-group input[type="tel"],
 .comment-form .form-group input[type="email"],
 .comment-form .form-group textarea,
 .comment-form .form-group select{
@@ -9713,3 +9716,51 @@ img{
     background-color: #ddd;
     border-radius: 50%;
 }
+
+
+/* -------------------------------------------- */
+/* The snackbar - position it at the bottom and in the middle of the screen */
+#snackbar {
+	visibility: hidden; /* Hidden by default. Visible on click */
+	min-width: 250px; /* Set a default minimum width */
+	margin-left: -125px; /* Divide value of min-width by 2 */
+	background-color: #333; /* Black background color */
+	color: #fff; /* White text color */
+	text-align: center; /* Centered text */
+	border-radius: 2px; /* Rounded borders */
+	padding: 16px; /* Padding */
+	position: fixed; /* Sit on top of the screen */
+	z-index: 10000000; /* Add a z-index if needed */
+	left: 50%; /* Center the snackbar */
+	bottom: 30px; /* 30px from the bottom */
+  }
+  
+  /* Show the snackbar when clicking on a button (class added with JavaScript) */
+  #snackbar.show {
+	visibility: visible; /* Show the snackbar */
+	/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+	However, delay the fade out process for 2.5 seconds */
+	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+	animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  /* Animations to fade the snackbar in and out */
+  @-webkit-keyframes fadein {
+	from {bottom: 0; opacity: 0;}
+	to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+	from {bottom: 0; opacity: 0;}
+	to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+	from {bottom: 30px; opacity: 1;}
+	to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+	from {bottom: 30px; opacity: 1;}
+	to {bottom: 0; opacity: 0;}
+  }
